--- a/aboutpage.html
+++ b/aboutpage.html
@@ -84,9 +84,11 @@
 </head>
 
 
+
+    <div class="flex flex-col min-h-screen">
 <header>
 
-    <nav class="left-0 w-full bg-lgrey top-0 z-50 opacity-75">
+    <nav class="left-0 w-full bg-lgrey top-0 z-50">
         <div id="home"
             class="max-w-screen-xl md:flex-nowrap flex flex-wrap gap-4 items-center justify-between mx-auto pb-6 pt-6 pl-3 pr-3">
             <div class="flex">
@@ -107,24 +109,24 @@
             </button>
             <div class="hidden w-full md:block md:w-auto font-comorant text-xl gap-4" id="navbar-default">
                 <ul
-                    class="font-medium opacity-100 flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
+                    class="font-medium opacity-100 md:mx-0 md:space-y-0 mx-4 space-y-4 flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
                     <li>
                         <a href="https://gill345.github.io."
-                            class="block py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:hover:text-blue md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue"
+                            class="block border-2 md:border-0 border-black py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:hover:text-blue md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue"
                             aria-current="page">Home</a>
                     </li>
                     <li>
                         <a href="https://gill345.github.io/aboutpage.html"
-                            class="block py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue  md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue"
+                            class="block border-2 md:border-0 border-black py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue  md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue"
                             aria-current="page">About Me</a>
                     </li>
                     <li>
                         <a href="https://gill345.github.io/skillspage.html"
-                            class="block py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue md:p-0 md:dark:hover:text-blue md:dark:hover:bg-transparent">Skills</a>
+                            class="block border-2 md:border-0 border-black py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue md:p-0 md:dark:hover:text-blue md:dark:hover:bg-transparent">Skills</a>
                     </li>
                     <li>
                         <a href="https://gill345.github.io/projectspage.html"
-                            class="block py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue md:p-0 md:dark:hover:text-blue md:dark:hover:bg-transparent">Projects</a>
+                            class="block border-2 md:border-0 border-black py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue md:p-0 md:dark:hover:text-blue md:dark:hover:bg-transparent">Projects</a>
                     </li>
                 </ul>
             </div>
@@ -132,9 +134,9 @@
     </nav>
 </header>
 
-<body class="bg-dgrey text-center font-comoront min-h-screen">
+<body class="bg-dgrey text-center font-comoront">
 
-    <h1 class="pt-28 text-4xl font-comorant underline font-bold animate-fadein">About Me</h1>
+    <h1 class="pt-6 text-4xl font-comorant underline font-bold animate-fadein">About Me</h1>
 <section class="pt-4 pb-6 text-lg font-comorant animate-slowfade">
     <p>
         Hey there, my name is Ranbir Gill and I am currently a Computer Science student at the Toronto Metropolitan
@@ -163,11 +165,11 @@
 </section>
 
 </body>
-
+</div>
 <footer class="inset-x-0 bottom-0 bg-lgrey w-full font-comorant z-0">
     <h1 class="text-2xl">Made By: Ranbir Gill</h1>
     <h1 class="text-xl">Email: ranbir.gill@torontomu.ca </h1>
     <h1 class="text-lg">Please reach out regarding any questions/concerns</h1>
 </footer>
-
+    </div>
 </html>
