--- a/projectspage.html
+++ b/projectspage.html
@@ -11,7 +11,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@100..900&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Doto:wght@100..900&family=Permanent+Marker&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bitter:wght@100..900&family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Doto:wght@100..900&family=Permanent+Marker&display=swap"
+        rel="stylesheet">
     <script>
         tailwind.config = {
             theme: {
@@ -44,12 +46,23 @@
                     },
                     animation: {
                         gradient: 'gradientAnimation 5s ease infinite',
+                        wave: 'wave 2s linear infinite',
+                        fadein: 'fadeIn 2s ease-in',
+                        slowfade: 'fadeIn 3s ease-in',
                     },
                     keyframes: {
                         gradientAnimation: {
                             '0%': { 'background-position': '0% 50%' },
                             '50%': { 'background-position': '100% 50%' },
                             '100%': { 'background-position': '0% 50%' },
+                        },
+                        wave: {
+                            '0%, 100%': { transform: 'rotate(0deg)' },
+                            '50%': { transform: 'rotate(15deg)' },
+                        },
+                        fadeIn: {
+                            '0%': { opacity: '0' },
+                            '100%': { opacity: '1' },
                         },
                     },
                 },
@@ -70,16 +83,18 @@
     <!-- <link rel="stylesheet" type="text/css" href="https://gill345.github.io/styles.css"> -->
 </head>
 
+
+
+    <div class="flex flex-col min-h-screen">
 <header>
 
-    
-    <nav class="fixed left-0 w-full bg-lgrey top-0 z-50 opacity-75">
+    <nav class="left-0 w-full bg-lgrey top-0 z-50">
         <div id="home"
             class="max-w-screen-xl md:flex-nowrap flex flex-wrap gap-4 items-center justify-between mx-auto pb-6 pt-6 pl-3 pr-3">
             <div class="flex">
-                <span
-                    class="self-center text-4xl font-marker font-bold whitespace-nowrap text--500 bg-color">
-                    <h1 class="opacity-100">Ranbir Gill<h1></span>
+                <span class="self-center text-4xl font-marker font-bold whitespace-nowrap text--500 bg-color">
+                    <h1 class="opacity-100">Ranbir Gill<h1>
+                </span>
             </div>
 
             <button data-collapse-toggle="navbar-default" type="button"
@@ -94,24 +109,24 @@
             </button>
             <div class="hidden w-full md:block md:w-auto font-comorant text-xl gap-4" id="navbar-default">
                 <ul
-                    class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
+                    class="font-medium opacity-100 md:mx-0 md:space-y-0 mx-4 space-y-4 flex flex-col p-4 md:p-0 mt-4 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0">
                     <li>
                         <a href="https://gill345.github.io."
-                        class="block py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:hover:text-blue md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue"
+                            class="block border-2 md:border-0 border-black py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:hover:text-blue md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue"
                             aria-current="page">Home</a>
                     </li>
                     <li>
                         <a href="https://gill345.github.io/aboutpage.html"
-                            class="block py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue  md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue"
+                            class="block border-2 md:border-0 border-black py-2 text-md px-3 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue  md:bg-transparent md:p-0 text-black-500 md:dark:hover:text-blue"
                             aria-current="page">About Me</a>
                     </li>
                     <li>
                         <a href="https://gill345.github.io/skillspage.html"
-                            class="block py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue md:p-0 md:dark:hover:text-blue md:dark:hover:bg-transparent">Skills</a>
+                            class="block border-2 md:border-0 border-black py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue md:p-0 md:dark:hover:text-blue md:dark:hover:bg-transparent">Skills</a>
                     </li>
                     <li>
                         <a href="https://gill345.github.io/projectspage.html"
-                            class="block py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue md:p-0 md:dark:hover:text-blue md:dark:hover:bg-transparent">Projects</a>
+                            class="block border-2 md:border-0 border-black py-2 text-md px-3 text-black-500 rounded hover:bg-gray-100 text-center md:hover:bg-transparent md:border-0 md:hover:text-blue md:p-0 md:dark:hover:text-blue md:dark:hover:bg-transparent">Projects</a>
                     </li>
                 </ul>
             </div>
@@ -119,5 +134,19 @@
     </nav>
 </header>
 
+<body class="bg-dgrey text-center font-comoront">
 
+    <h1 class="pt-6 text-4xl font-comorant underline font-bold animate-fadein">Projects</h1>
+<section class="pt-4 pb-6 text-lg font-comorant animate-slowfade">
+
+</section>
+
+</body>
+</div>
+<footer class="inset-x-0 bottom-0 bg-lgrey w-full font-comorant z-0">
+    <h1 class="text-2xl">Made By: Ranbir Gill</h1>
+    <h1 class="text-xl">Email: ranbir.gill@torontomu.ca </h1>
+    <h1 class="text-lg">Please reach out regarding any questions/concerns</h1>
+</footer>
+    </div>
 </html>
