--- a/projectspage.html
+++ b/projectspage.html
@@ -143,10 +143,11 @@
 
 </body>
 </div>
-<footer class="inset-x-0 bottom-0 bg-lgrey w-full font-comorant z-0">
+<footer class="inset-x-0 bottom-0 bg-lgrey w-full font-comorant z-0 text-center">
     <h1 class="text-2xl">Made By: Ranbir Gill</h1>
-    <h1 class="text-xl">Email: ranbir.gill@torontomu.ca </h1>
-    <h1 class="text-lg">Please reach out regarding any questions/concerns</h1>
+    <a href="mailto:ranbir.gill@torontomu.ca">
+        <h1 class="text-xl text-indigo-500 hover:text-blue">ranbir.gill@torontomu.ca</h1>
+    </a>
 </footer>
     </div>
 </html>
