--- a/projectspage.html
+++ b/projectspage.html
@@ -134,7 +134,7 @@
         </nav>
     </header>
 
-    <body class="bg-dgrey text-center font-comoront">
+    <body class="bg-dgrey text-center font-comoront pr-5 pl-5">
 
         <h1 class="pt-6 text-4xl font-comorant underline font-bold animate-fadein">Projects</h1>
 
