--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+  name="description"
+  content="A short and simple personal page that I made to
+   introduce myself and highlight some of my skills and experiences">
     <title>Ranbir Gill</title>
     <link rel="icon" type="image/x-icon" href="images/icon.ico">
     <link href="https://unpkg.com/pattern.css" rel="stylesheet">
