--- a/projectspage.html
+++ b/projectspage.html
@@ -138,40 +138,54 @@
 
         <h1 class="pt-6 text-4xl font-comorant underline font-bold animate-fadein">Projects</h1>
 
-        <section class="text-left font-comorant pr-3 pl-3">
-            <h1 class="pt-8 text-2xl font-bold">MonkeyBot</h1>
-            <img class="hover:scale-125 transition-all duration-300 w-80 h-80 pt-6 pb-6" src="images/discord.png"
+        <section class="grid grid-cols-1 justify-items-center text-left font-comorant pr-3 pl-3 pt-8">
+            <h1 class="text-2xl font-bold underline italic">MonkeyBot</h1>
+            <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6" src="images/discord.png"
                 alt="pending">
-            <p class="text-lg">MonkeyBot was a Python Discord Bot that I initially created for learning purposes but
+            <p class="text-lg text-center">MonkeyBot was a Python Discord Bot that I initially created for learning
+                purposes but
                 then decided to add it to my group server for testing purposes. At the start it had simple commands such
                 as response commands and some minigames like rock paper scisors and guess the number. As I tested and
                 learned new features I added more functionality such as the music player ability. Apart from that it's
                 still a simple bot with more plans in the future.</p>
         </section>
 
-        <section class="text-left font-comorant pr-3 pl-3">
-            <h1 class="pt-8 text-2xl font-bold">Quick Weather Site</h1>
-            <img class="hover:scale-125 transition-all duration-300 w-80 h-80 pt-6 pb-6" src="images/weather.png"
+        <section class="grid grid-cols-1 justify-items-center text-left font-comorant pr-3 pl-3 pt-8">
+            <h1 class="text-2xl font-bold underline italic">Bike Rental Site</h1>
+            <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6" src="images/bike.png"
                 alt="pending">
-            <p class="text-lg">Quick Weather Site was a site that I created as an additional source of weather info when
+            <p class="text-lg text-center">Bike Rental Site was a site that I created in which users can view bikes
+                available for rent, rent out a bike, and post their own bike up for rent.
+                To store bike and rental information I decided to utilize SQL to store this data and PHP for the overall
+                input and data processing. I plan to add more functionality in the future, such as integrating payment systems.
+            </p>
+        </section>
+
+        <section class="grid grid-cols-1 justify-items-center font-comorant pr-3 pl-3 pt-8">
+            <h1 class="text-2xl font-bold underline italic">Quick Weather Site</h1>
+            <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6" src="images/weather.png"
+                alt="pending">
+            <p class="text-lg text-center">Quick Weather Site was a site that I created as an additional source of
+                weather info when
                 needed. Often I would check the weather on my phone and then look outside and see a completely different
                 scene. As such I decided to make a PHP site that would allow me to quickly search any city and gets its
                 current weather from OpenWeatherSource. Additionally it would save that city as a cookie so I do not
-                have to re-enter the city name upon search. </p>
+                have to re-enter the city name upon search.</p>
         </section>
 
-        <section class="text-left font-comorant pb-6 pr-3 pl-3">
-            <h1 class="pt-8 text-2xl font-bold">UberUI</h1>
-            <img class="hover:scale-125 transition-all duration-300 w-80 h-80 pt-6 pb-6" src="images/uberui.png"
+        <section class="grid grid-cols-1 justify-items-center font-comorant pb-6 pr-3 pl-3 pt-8">
+            <h1 class="text-2xl font-bold underline italic">UberUI</h1>
+            <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6" src="images/uberui.png"
                 alt="pending">
-            <p class="text-lg">UberUI was a Java project consisting of 10+ classes which allowed multiple riders and
+            <p class="text-lg text-center">UberUI was a Java project consisting of 10+ classes which allowed multiple
+                riders and
                 drivers. Additionally, various algorithms were used to replicate Ubers system in a console format.</p>
         </section>
 
-        <section class="text-left font-comorant pb-6 pr-3 pl-3">
-            <h1 class="pt-8 text-2xl font-bold">Work in Progress</h1>
+        <section class="grid grid-cols-1 justify-items-center font-comorant pb-6 pr-3 pl-3">
+            <h1 class="pt-8 text-2xl font-bold italics underline">Work in Progress</h1>
             <img class="" src="" alt="pending">
-            <p class="text-lg">Work in Progress</p>
+            <p class="text-lg text-center">Work in Progress</p>
         </section>
 
 
