--- a/projectspage.html
+++ b/projectspage.html
@@ -146,7 +146,7 @@
                 purposes but
                 then decided to add it to my group server for testing purposes. At the start it had simple commands such
                 as response commands and some minigames like rock paper scisors and guess the number. As I tested and
-                learned new features I added more functionality such as the music player ability. Apart from that it's
+                learned new features I added more functionality such as the music player ability that uses the YT-DLP library. Apart from that it's
                 still a simple bot with more plans in the future.</p>
         </section>
 
@@ -171,7 +171,9 @@
                 needed. Often I would check the weather on my phone and then look outside and see a completely different
                 scene. As such I decided to make a PHP site that would allow me to quickly search any city and gets its
                 current weather from OpenWeatherSource. Additionally it would save that city as a cookie so I do not
-                have to re-enter the city name upon search.</p>
+                have to re-enter the city name upon search. A short JavaScript script allows me to change the background image
+                depending on local weather conditions.
+            </p>
         </section>
 
         <section class="grid grid-cols-1 justify-items-center font-comorant pb-6 pr-3 pl-3 pt-8">
@@ -179,8 +181,10 @@
             <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6" src="images/uberui.png"
                 alt="pending">
             <p class="text-lg text-center">UberUI was a Java project consisting of 10+ classes which allowed multiple
-                riders and
-                drivers. Additionally, various algorithms were used to replicate Ubers system in a console format.</p>
+                riders and drivers. Additionally, various algorithms are implemented alongside multiple data structures
+                such as linked-lists and queues to replicate Ubers system in a console format. The program has been tested for 
+                hundereds of various scenarios.
+            </p>
         </section>
 
         <section class="grid grid-cols-1 justify-items-center font-comorant pb-6 pr-3 pl-3">
