--- a/projectspage.html
+++ b/projectspage.html
@@ -134,7 +134,8 @@
         </nav>
     </header>
 
-    <body class="bg-gradient-to-r from-lgrey via-dgrey to-slate-500 bg-[length:200%_200%] animate-gradient text-center font-comoront">
+    <body
+        class="bg-gradient-to-r from-lgrey via-dgrey to-slate-500 bg-[length:200%_200%] animate-gradient text-center font-comoront">
 
         <h1 class="pt-6 text-4xl font-comorant underline font-bold animate-fadein">Projects</h1>
 
@@ -146,50 +147,56 @@
                 purposes but
                 then decided to add it to my group server for testing purposes. At the start it had simple commands such
                 as response commands and some minigames like rock paper scisors and guess the number. As I tested and
-                learned new features I added more functionality such as the music player ability that uses the YT-DLP library. Apart from that it's
+                learned new features I added more functionality such as the music player ability that uses the YT-DLP
+                library. Apart from that it's
                 still a simple bot with more plans in the future.</p>
         </section>
-        <hr>
+        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-black-700">
         <section class="grid grid-cols-1 justify-items-center text-left font-comorant pr-3 pl-3 pt-8">
             <h1 class="text-2xl font-bold underline italic">Bike Rental Site</h1>
-            <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6" src="images/cycles.png"
-                alt="pending">
-            <p class="text-lg text-center">Bike Rental Site was a site that I created in which users can sign up, view bikes
-                available for rent, rent out a bike, and post their own bike up for rent.
-                To store bike and rental information I decided to utilize a MySQL database to store this data and PHP for the overall
-                input and data processing. I plan to add more functionality in the future, such as integrating payment systems.
-            </p>
-        </section>
-
-        <hr>
-        <section class="grid grid-cols-1 justify-items-center font-comorant pr-3 pl-3 pt-8">
-            <h1 class="text-2xl font-bold underline italic">Quick Weather Site</h1>
-            <a class="text-2xl text-sky-700 font-bold" href="http://ranbirweather.wuaze.com/">Link to Site</a>
-            <video class="w-96 h-96 pt-6 pb-6" controls loop>
+            <video class="w-96 h-96 pt-6 pb-6" loop>
                 <source src="images/bicycles.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+            <p class="text-lg text-center">Bike Rental Site was a site that I created in which users can sign up, view
+                bikes
+                available for rent, rent out a bike, and post their own bike up for rent.
+                To store bike and rental information I decided to utilize a MySQL database to store this data and PHP
+                for the overall
+                input and data processing. I plan to add more functionality in the future, such as integrating payment
+                systems.
+            </p>
+        </section>
+
+        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-black-700">
+        <section class="grid grid-cols-1 justify-items-center font-comorant pr-3 pl-3 pt-8">
+            <h1 class="text-2xl font-bold underline italic">Quick Weather Site</h1>
+            <a class="text-2xl text-sky-700 font-bold" href="http://ranbirweather.wuaze.com/">Link to Site</a>
+            <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6" src="images/weather.png"
+                alt="pending">
             <p class="text-lg text-center">Quick Weather Site was a site that I created as an additional source of
                 weather info when
                 needed. Often I would check the weather on my phone and then look outside and see a completely different
                 scene. As such I decided to make a PHP site that would allow me to quickly search any city and gets its
                 current weather from OpenWeatherSource. Additionally it would save that city as a cookie so I do not
-                have to re-enter the city name upon search. A short JavaScript script allows me to change the background image
+                have to re-enter the city name upon search. A short JavaScript script allows me to change the background
+                image
                 depending on local weather conditions.
             </p>
         </section>
-        <hr>
+        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-black-700">
         <section class="grid grid-cols-1 justify-items-center font-comorant pb-6 pr-3 pl-3 pt-8">
             <h1 class="text-2xl font-bold underline italic">UberUI</h1>
             <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6" src="images/uberui.png"
                 alt="pending">
             <p class="text-lg text-center">UberUI was a Java project consisting of 10+ classes which allowed multiple
                 riders and drivers. Additionally, various algorithms are implemented alongside multiple data structures
-                such as linked-lists and queues to replicate Ubers system in a console format. The program has been tested for 
+                such as linked-lists and queues to replicate Ubers system in a console format. The program has been
+                tested for
                 hundereds of various scenarios.
             </p>
         </section>
-        <hr>
+        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-black-700">
         <section class="grid grid-cols-1 justify-items-center font-comorant pb-6 pr-3 pl-3">
             <h1 class="pt-8 text-2xl font-bold italics underline">Work in Progress</h1>
             <img class="" src="" alt="pending">
