--- a/projectspage.html
+++ b/projectspage.html
@@ -151,7 +151,7 @@
                 library. Apart from that it's
                 still a simple bot with more plans in the future.</p>
         </section>
-        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-black-700">
+        <hr class="h-px my-8 border-0 bg-gray-800">
         <section class="grid grid-cols-1 justify-items-center text-left font-comorant pr-3 pl-3 pt-8">
             <h1 class="text-2xl font-bold underline italic">Bike Rental Site</h1>
             <video class="w-96 h-96 pt-6 pb-6" loop>
@@ -168,7 +168,7 @@
             </p>
         </section>
 
-        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-black-700">
+        <hr class="h-px my-8 border-0 bg-gray-800">
         <section class="grid grid-cols-1 justify-items-center font-comorant pr-3 pl-3 pt-8">
             <h1 class="text-2xl font-bold underline italic">Quick Weather Site</h1>
             <a class="text-2xl text-sky-700 font-bold" href="http://ranbirweather.wuaze.com/">Link to Site</a>
@@ -184,7 +184,7 @@
                 depending on local weather conditions.
             </p>
         </section>
-        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-black-700">
+        <hr class="h-px my-8 border-0 bg-gray-800">
         <section class="grid grid-cols-1 justify-items-center font-comorant pb-6 pr-3 pl-3 pt-8">
             <h1 class="text-2xl font-bold underline italic">UberUI</h1>
             <img class="hover:scale-125 transition-all duration-300 w-96 h-96 pt-6 pb-6" src="images/uberui.png"
@@ -196,7 +196,7 @@
                 hundereds of various scenarios.
             </p>
         </section>
-        <hr class="h-px my-8 bg-gray-200 border-0 dark:bg-black-700">
+        <hr class="h-px my-8 border-0 bg-gray-800">
         <section class="grid grid-cols-1 justify-items-center font-comorant pb-6 pr-3 pl-3">
             <h1 class="pt-8 text-2xl font-bold italics underline">Work in Progress</h1>
             <img class="" src="" alt="pending">
