--- a/projectspage.html
+++ b/projectspage.html
@@ -154,7 +154,7 @@
         <hr class="h-px my-8 border-0 bg-gray-800">
         <section class="grid grid-cols-1 justify-items-center text-left font-comorant pr-3 pl-3 pt-8">
             <h1 class="text-2xl font-bold underline italic">Bike Rental Site</h1>
-            <video class="w-96 h-96 pt-6 pb-6" loop>
+            <video class="w-96 h-96 pt-6 pb-6" loop autoplay muted playsinline>
                 <source src="images/bicycles.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
